--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.5",
     "chart.js": "^4.5.0",
