--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
     "@emailjs/browser": "^4.4.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.5",
     "chart.js": "^4.5.0",
     "emailjs-com": "^3.2.0",
